count date range

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -1758,7 +1758,11 @@
    "outputs": [],
    "source": [
     "# pandas reset index\n",
-    "df.reset_index(['index'])"
+    "df.reset_index(['index'])\n",
+    "\n",
+    "df.set_index(characteristics, inplace=True)\n",
+    "df = df.loc[['0 - 200', '201 - 500', \n",
+    "        '501 - 1000', '1001 - 2000', '2001 - 5000', '5000+']]"
    ]
   },
   {
