--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -1761,8 +1761,8 @@
     "df.reset_index(['index'])\n",
     "\n",
     "df.set_index(characteristics, inplace=True)\n",
-    "df = df.loc[['0 - 200', '201 - 500', \n",
-    "        '501 - 1000', '1001 - 2000', '2001 - 5000', '5000+']]"
+    "df = df.reindex(['0 - 200', '201 - 500', \n",
+    "        '501 - 1000', '1001 - 2000', '2001 - 5000', '5000+'])"
    ]
   },
   {
