--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -1762,7 +1762,7 @@
     "\n",
     "df.set_index(characteristics, inplace=True)\n",
     "df = df.reindex(['0 - 200', '201 - 500', \n",
-    "        '501 - 1000', '1001 - 2000', '2001 - 5000', '5000+'])"
+    "        '501 - 1000', '1001 - 2000', '2001 - 5000', '5000+'], fill_value=0)"
    ]
   },
   {
