groupby and rank

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -5322,7 +5322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -5388,7 +5388,7 @@
        "3         124          2           1.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5402,7 +5402,7 @@
     "df = pd.DataFrame({'Auction_ID':[123,123,124,124],\\\n",
     "                   'Bid_Price':[9,7,1,2]})\n",
     "\n",
-    "df['Auction_Rank'] = df.groupby('Auction_ID')['Bid_Price'].rank(ascending=False)\n",
+    "df['Auction_Rank'] = df.groupby('Auction_ID')['Bid_Price'].rank(ascending=False, method='min')\n",
     "df"
    ]
   },
