legend font size

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -1574,7 +1574,7 @@
     "ax1.scatter(X[y==0,0], X[y==0,1], c='r', label='Iris-setosa')\n",
     "ax1.scatter(X[y==1,0], X[y==1,1], c='g', label='Iris-versicolor')\n",
     "ax1.scatter(X[y==2,0], X[y==2,1], c='b', label='Iris-virginica')\n",
-    "plt.legend(loc='upper right');\n",
+    "plt.legend(loc='upper right', prop={'size': 6});\n",
     "plt.xlabel('PC1')\n",
     "plt.ylabel('PC2')\n",
     "plt.show()"
