--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -12,6 +12,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Memory Management"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "340"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import gc\n",
+    "\n",
+    "# batches is a DataFrame, which uses a lot of memory.\n",
+    "batches = ()\n",
+    "\n",
+    "# Release memory for batches\n",
+    "del batches\n",
+    "gc.collect()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
