timedelta to minutes

--- a/000PythonSnippet.ipynb
+++ b/000PythonSnippet.ipynb
@@ -4804,7 +4804,10 @@
     "# batches['day1']/['day2'] are datetime\n",
     "batches['day1'] = pd.to_datetime(batches['day1'], infer_datetime_format=True)\n",
     "batches['day1'] = batches['day1'].map(lambda x: x.date())\n",
-    "batches['day_diff'] = (batches['day2'] - batches['day1']).map(lambda x: x.days)"
+    "batches['day_diff'] = (batches['day2'] - batches['day1']).map(lambda x: x.days)\n",
+    "\n",
+    "# Timedelta to minutes\n",
+    "# df['minutes'] = (df['time2'] - df['time1']).map(lambda x: x.seconds / 60)"
    ]
   },
   {
